--- a/timebucks.html
+++ b/timebucks.html
@@ -14,10 +14,11 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "timebucks.css"], "outOfDate":[]};
 </script>
   
+  <link rel="shortcut icon" href="images/a-master-favicon.ico?crc=72278761"/>
   <title>TimeBucks</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/timebucks.css?crc=3928893648" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/timebucks.css?crc=4071054688" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_timebucks.css?crc=3980019311" id="nomq_pagesheet"/>
