--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta property="og:title" content="Earn $350/Week..." />
   <meta property="og:image" content="https://www.specialfreeoffers.ga/temp.png" />
- 
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  var OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "7eb24060-b4d1-4d6d-8438-f902122ff9d2",
+    });
+  });
+</script>
   <script type="text/javascript">
    // Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
